tools/architecture/validate-source-imports/tests/fixtures/invalid/adapter-imports-unlisted/src/index.ts
import { workflow } from "@platform/feature-workflow";
export const packageName = "@platform/adapters-postgres";
